--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,4 @@
+// https://www.youtube.com/watch?v=C7D4nMvbdFQ
 {
   "env": {
     "browser": true,
@@ -9,7 +10,7 @@
     "ecmaFeatures": {
       "jsx": true
     },
-    "ecmaVersion": 13,
+    // "ecmaVersion": 13,
     "sourceType": "module"
   },
 
@@ -18,10 +19,6 @@
     "react": {
       "version": "detect"
     }
-  },
-  "rules": {
-    "react/react-in-jsx-scope": "off",
-    "no-unused-vars":"warn"
   },
   "overrides": [
     {
@@ -37,5 +34,10 @@
         "jest": true
       }
     }
-  ]
+  ],
+  "rules": {
+    "react/react-in-jsx-scope": "off",
+    "no-unused-vars":"warn",
+    "no-debugger":"warn"
+  }
 }
