--- a/package.json
+++ b/package.json
@@ -48,8 +48,13 @@
     "lint-staged": "^11.2.3",
     "prettier": "^2.4.1"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
-    "*.{js,jsx}": "eslint --cache --fix",
-    "*.{js,css,md}": "prettier --write"
+    "*.{js,css,md}": "prettier --write",
+    "*.js": "eslint --cache --fix --max-warnings=0"
   }
 }
